Added Docker configuration setup and fixes to some apis in accordance to docker setup

--- a/alembic.ini
+++ b/alembic.ini
@@ -40,7 +40,7 @@ prepend_sys_path = .
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql://postgres:117l3vi@127.0.0.1:5432/thesis
+sqlalchemy.url = postgresql://postgres:117l3vi@db:5432/thesis
 
 
 [post_write_hooks]
